# RisoPrint

./: .gitignore  CMakeLists.txt  README.md  risowrapper.sh
lib/: CMakeLists.txt  Helper.cc  Helper.h  ImageFile.cc  ImageFile.h  ImageLine.cc  ImageLine.h  Job.cc  Job.h  JobFile.cc  JobFile.h  JobOptions.cc  JobOptions.h  JobPages.cc  JobPages.h  MMapFile.cc  MMapFile.h  Page.cc  Page.h  RisoInit.cc  RisoInit.h
sample/: CMakeLists.txt  risoencode.cc  risoparser.cc
